@startuml

entity Job {
    * **job_id** VARCHAR(20)
    ---
    job_description VARCHAR(255)
    rate_hour DECIMAL(10,2)
}

entity Employee {
    * **employee_id** INT
    * job_id VARCHAR(20)
    ---
    employee_name VARCHAR(255)
    join_date DATE
}

entity Project {
    * **project_id** INT
    ---
    project_name VARCHAR(255)
}

entity Work {
    * **work_id** VARCHAR(20)
    * project_id INT
    ---
    assign_date DATE
}

entity EmployeeWork {
    **id** INT
    * employee_id INT
    * work_id VARCHAR(20)
    ---
    work_hour INT
    charge_amount DECIMAL(10,2)
}

Employee }|--|| Job
EmployeeWork }|--|| Employee
EmployeeWork }|--|| Work
Work }|--|| Project

@enduml
